# mini_bot

./: .gitignore  CHANGELOG.md  GEMINI.md  README.md  config.json.example  opencode.json  pyproject.toml  setup_git_sync.ps1
Windows/: GEMINI.md
macOS/: GEMINI.md
minibot/: __init__.py  __main__.py
minibot/agent/: __init__.py  context.py  loop.py  memory.py
minibot/agent/tools/: __init__.py  base.py  filesystem.py  registry.py
minibot/bus/: __init__.py  events.py  queue.py
minibot/channels/: __init__.py  telegram.py
minibot/cli/: __init__.py  commands.py
minibot/config/: __init__.py  loader.py  schema.py
minibot/providers/: __init__.py  base.py  litellm_provider.py
minibot/session/: __init__.py  manager.py
minibot/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_config.py  test_helpers.py
workspace/: AGENTS.md.example
workspace/memory/: MEMORY.md.example
