[project]
name = "minibot"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "litellm>=1.81.5,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "loguru>=0.7.3,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "python-telegram-bot>=22.0,<23.0",
]

[project.scripts]
minibot = "minibot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minibot"]
